--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,7 @@ header h1 {
   margin-left: -10px;
   padding: 24px;
   background-color: rgba(255, 255, 255, 0.9); /* Fundo branco com transparência */
+  z-index: 1;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-align: left; /* Alinha o texto à esquerda */
@@ -77,23 +78,6 @@ header h1 {
 
 .form-input:focus {
   border-color: #007bff;
-}
-
-.form-button {
-  padding: 12px;
-  font-size: 16px;
-  font-weight: bold;
-  color: #ffffff;
-  background-color: #007bff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  align-self: center;
-}
-
-.form-button:hover {
-  background-color: #0056b3;
 }
 
 .error-message {
